gradle-plugin/it/src/it/ingress/expected/groovy-dsl-config/kubernetes.yml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      jkube.io/git-url: "@ignore@"
      jkube.io/git-commit: "@ignore@"
      jkube.io/git-branch: "@ignore@"
    labels:
      app: ingress
      provider: jkube
      version: "@ignore@"
      group: org.eclipse.jkube.integration.tests.gradle
    name: ingress
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: ingress
      provider: jkube
      group: org.eclipse.jkube.integration.tests.gradle
    type: LoadBalancer
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      jkube.io/git-url: "@ignore@"
      jkube.io/git-commit: "@ignore@"
      jkube.io/git-branch: "@ignore@"
    labels:
      app: ingress
      provider: jkube
      version: "@ignore@"
      group: org.eclipse.jkube.integration.tests.gradle
    name: ingress
  spec:
    replicas: 1
    revisionHistoryLimit: 2
    selector:
      matchLabels:
        app: ingress
        provider: jkube
        group: org.eclipse.jkube.integration.tests.gradle
    template:
      metadata:
        annotations:
          jkube.io/git-url: "@ignore@"
          jkube.io/git-commit: "@ignore@"
          jkube.io/git-branch: "@ignore@"
        labels:
          app: ingress
          provider: jkube
          version: "@ignore@"
          group: org.eclipse.jkube.integration.tests.gradle
      spec:
        containers:
        - env:
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          - name: HOSTNAME
            valueFrom:
              fieldRef:
                fieldPath: metadata.name
          image: repository/ingress:latest
          imagePullPolicy: IfNotPresent
          name: repository-ingress
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          securityContext:
            privileged: false
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      jkube.io/git-url: "@ignore@"
      jkube.io/git-commit: "@ignore@"
      jkube.io/git-branch: "@ignore@"
    labels:
      app: ingress
      provider: jkube
      version: "@ignore@"
      group: org.eclipse.jkube.integration.tests.gradle
    name: ingress
  spec:
    rules:
    - host: hello.example.systems
      http:
        paths:
        - backend:
            service:
              name: ingress
              port:
                number: 8080
          path: /
          pathType: ImplementationSpecific
    tls:
    - hosts:
      - https-example.foo.com
      secretName: testsecret-tls
